add: deploy scripts

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "watch": "forge test --watch",
-    "test:cf": "forge test -vv --match-path test/crowd-funding/**/*.t.sol"
+    "test:cf": "forge test -vv --match-path test/crowd-funding/**/*.t.sol",
+    "deploy:fuji": "npx hardhat run --network fuji scripts/deploy.ts",
+    "deploy:mumbai": "npx hardhat run --network mumbai scripts/deploy.ts"
   },
   "keywords": [],
   "author": "",
@@ -25,6 +27,7 @@
     "@types/mocha": ">=9.1.0",
     "@types/node": ">=12.0.0",
     "chai": "^4.2.0",
+    "dotenv": "^16.0.3",
     "ethers": "^5.4.7",
     "hardhat": "^2.11.1",
     "hardhat-gas-reporter": "^1.0.8",
