--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "deps": "pnpm install && forge install",
     "watch": "forge test --watch",
     "test:cf": "forge test -vv --match-path test/crowd-funding/**/*.t.sol",
     "deploy:fuji": "npx hardhat run --network fuji scripts/deploy.ts",
